abe-desktop (8~dev) UNRELEASED; urgency=low

  * Add new metapackage abe-monitoring
  * Split up abe-laptop in abe-laptop, abe-laptop-ubuntu, and
    abe-laptop-small-disk.
  * abe-desktop-common: Recommend xfce4-volumed
  * abe-laptop: Conflict with apmd (needs non-Debian kernel)

 -- Axel Beckert <abe@deuxchevaux.org>  Mon, 22 Oct 2012 23:29:43 +0200

abe-desktop (7.1) unstable; urgency=low

  * fail2ban only works with system-log-daemons != busybox-syslogd → add
    busybox-syslogd as alternative to fail2ban. (c.f. #691002)
  * Prefer rxvt-unicode-256color over rxvt-unicode
  * Fix entry about sipcalc promotion in previous entry.

 -- Axel Beckert <abe@deuxchevaux.org>  Mon, 22 Oct 2012 23:28:46 +0200

abe-desktop (7) unstable; urgency=low

  * Make sure important alternatives are listed separately, too.
  * Merge in some dependencies of kiva-base and other kiva-* metapackages.
  * abe-laptop: Satisfy some of Ubuntu's brainsick ubuntu-minimal hard
    dependencies by providing them.
    + Provide vim-tiny to be able to remove it. (Who needs vim-tiny if a
      more complete vim can be installed.)
    + Provide rsyslog to be able to install other, less resource-hungry
      syslog daemons instead. Promote busybox-syslogd from Recommends to
      Depends and add an alternative dependency on system-log-daemon.
    + Conflict with and provide debconf-i18n again to get rid of
      it. Depend on debconf (>= 1.5.39) | debconf-english to have
      debconf-english installed when debconf needs either debconf-i18n or
      debconf-english.
  * abe-commandline:
    + Suggest chiark-scripts (for random-word) or polygen
    + Promote sipcalc to Depends. Alternatives are ipcalc and netmask.
  * abe-office: Suggest at least one Markdown implementation.

 -- Axel Beckert <abe@deuxchevaux.org>  Wed, 17 Oct 2012 22:09:20 +0200

abe-desktop (6.1) unstable; urgency=low

  * Add missing dependency to libnotify-bin to abe-desktop-common.