@@ -3,6 +3,9 @@ abe-desktop (8~dev) UNRELEASED; urgency=low
   * Add new metapackage abe-monitoring
   * Split up abe-laptop in abe-laptop, abe-laptop-ubuntu, and
     abe-laptop-small-disk.
+  * Include /etc/apt/apt.conf.d/98-hardlink-doc in abe-laptop-small-disk
+    + Fix debian/rules (merge install target in binary-indep target)
+    + abe-laptop-small-disk needs to depend on hardlink
   * abe-desktop-common: Recommend xfce4-volumed
   * abe-laptop: Conflict with apmd (needs non-Debian kernel)
 
